# mle-training

./: .gitignore  Dockerfile  Housing.ipynb  README.md  env.yaml  env.yml  hello.py  nonstandardcode.py  pyproject.toml  requirements.txt
.github/workflows/: action.yml
docs/: conf.py  index.rst
docs/_build/doctrees/: index.doctree
docs/_build/doctrees/source/: housing.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/source/: housing.html  modules.html
docs/source/: housing.rst:Zone.Identifier
mlruns/538904485903685947/2b7ac31aa7914264ba5112f88728bbde/artifacts/processed/: test_X.csv  train_X.csv
notebook/: Housing.ipynb
src/housing/: ingest_data.py  logger.py  run_script.py  score.py  train.py
src/housing.egg-info/: PKG-INFO  SOURCES.txt
test/: run_script_test.py  test_installation.py  test_unitinstallation.py
test/functional_test/: functional_test.py
test/unit_test/: test_ingest_data.py  test_run_script.py  test_score.py  test_score.py:Zone.Identifier  test_train.py
