[tool.black]
line-length = 79

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "housing"
description = "To standardize our code for production."
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"'
]
readme = "README.md"
