[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "housing"
version = "1.0.0"
authors = [
    {name = "Surya Sekar", email = "surya.sekar@tigeranalytics.com"}
]
description = "Surya_training"
readme = "README.md"
requires-python = ">=3.9"

[dependencies]
numpy = "1.26.1"
pandas = "2.1.2"
scikit-learn= "1.3.0"