[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "housing"
version = "0.0.0"
authors = [
    {name = "Harshavarthini C", email = "harshavarthini.c@tigeranalytics.com"}
]
description = "mle-training"
readme = "README.md"
requires-python = ">=3.9"

[dependencies]
numpy = "1.26.1"
pandas = "2.1.2"
scikit-learn= "1.3.0"